extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr1.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr1.obr:10:17:error: ':=' expected but 'D' found
   DivideByZero DO
                ^
